--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "prettier": "^2.7.1"
   },
   "keywords": [
