--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
-    "prettier": "^2.7.1"
+    "autoprefixer": "^10.4.8",
+    "gatsby-plugin-postcss": "^5.22.0",
+    "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.8"
   },
   "keywords": [
     "gatsby"
